--- a/.env
+++ b/.env
@@ -1,16 +1,20 @@
-APP_NAME=Laravel
+APP_NAME="IMS System"
 APP_ENV=local
 APP_KEY=base64:IOZuzUsEtJE/YLqgpOJzpb5MDLJRk+DLKxwcYnvqkUU=
 APP_DEBUG=true
 APP_URL=http://localhost
+ASSET_URL=http://localhost
+FAKER_LOCALE=en_US
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# DB_CONNECTION=sqlite
+
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3307
+DB_HOST=localhost
+DB_PORT=3306
 DB_DATABASE=invmsdb
 DB_USERNAME=root
 DB_PASSWORD=
@@ -28,8 +32,8 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=mailpit
+MAIL_MAILER=smtp
+MAIL_HOST=127.0.0.1
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
